<resources>
    <string name="app_name">android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--Login form strings-->
    <string name="username_login_form">Username</string>
    <string name="password_login_form">Password</string>
    <string name="username_login_form_hint">login name</string>
    <string name="login_button_text">Sign In</string>
    <string name="go_to_register">Create a new account</string>

    <!--Login and Registration form error messages-->
    <string name="banner_registration_page">Registration Page</string>
    <string name="psswrd_error_message">Please enter your password!</string>
    <string name="email_error_message">Please enter a valid email address!</string>
    <string name="regEx_psswrd_error_message">The password must be at least 8 characters and must include one digit, one lowercase character, one uppercase character, one special character, and one special character(!@#$%&amp;*()-+=^). No white spaces are allowed.</string>
    <string name="reg_psswrd_error_message">Please enter and confirm your password!</string>
    <string name="confirm_password_error_message">Please enter the same password in the Confirm Password field!</string>
    <string name="fName_error_message">Please enter your first name!</string>
    <string name="lName_error_message">Please enter your last name!</string>

    <!--Register form strings and arrays-->
    <string name="register_button_text">Register</string>
    <string name="firstName_register_form">First Name</string>
    <string name="firstName_register_form_hint">First Name</string>
    <string name="lastName_register_form">Last Name</string>
    <string name="lastName_register_form_hint">Last Name</string>
    <string name="email_register_form">Email Address</string>
    <string name="email_register_form_hint">email@domain.com</string>
    <string name="password_confirmation_register_form">Confirm Password</string>

    <string name="select_term">Select the term you are interested in: </string>
    <string name="select_year">Select the year that you are in: </string>
    <string name="select_course">Select the courses you are interested in: </string>
    <string name="select_level">Select the level of courses that you are interested in:</string>

    <string-array name="years_list">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
    </string-array>
    <string-array name="levels_list">
        <item>100 Level</item>
        <item>200 Level</item>
        <item>300 Level</item>
        <item>400 Level</item>
    </string-array>


    <string name="proceed_button">Create Account</string>
    <string name="course_selection_button">Course Selection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="forward"> -&gt; </string>
    <string name="backward"> &lt;- </string>


    <!--  Create Groups Strings.xml uses -->

    <string name="BannerRegistrationPage"> Groups Registration Page</string>
    <string name="FormErr"> Err: Form is invalid, please make sure all fields are completed</string>
    <!--  Create Groups String.xml  end  -->

    <!--  Groups Fragment Strings.xml uses -->
    <string name="Close"> Close </string>
    <string name="EmailErr">You do not have an app that can send emails </string>
    <string name="SaveButtonText"> Save </string>
    <string name="ConfirmGroupReButton"> Are you sure you want to be removed from </string>
    <string name="Yes"> Yes</string>
    <string name="NoGroupsPage"> No groups available! </string>
    <!--  Groups Fragment Strings.xml end  -->


    <!-- Menu items Strings.xml Start -->
    <string name="feedback"> Leave Feedback on app</string>
    <string name="GroupsParagraph">The groups feature is the hub of where you can interact with other students in the same class as you. This can allow you to add fellow students across classes, organize you group and email your instructor or other group members. To get started you can click on the create a group button, this will take you to a user form to fill out all relevant information. Once a group has been created, you can either edit your group, remove yourself from the group or check out more details by clicking on the group.Feel free to explore around the Groups Feature!</string>
    <string name="AppointmentParagraph">In the appointments section you can interact with your educator. Here you can book and cancel appointments for you and your group.
To get started select your course from the top drop-down button you would like to book an appointment for. Then scroll to a day you would like and click on the book appointment button. There you will be see a page where you can select a time for your appointment. When you are finished press the finished button.
You are also able to cancel an appointment view the full list of appointments you have. Feel free to explore around the Appointments Feature!</string>

    <string name="CoursesParagraph">The courses section is your one stop shop to explore all the course offerings your school has. This is the core of the app, dictating the groups, students, and educators you are able to interact with.
To get started click on add a course to bring in additional classes for you to interact with. This will take you to a page where you can select a course by year level.You are also able to remove yourself from a course and view the full list of courses you are enrolled in. Feel free to explore around the Courses Feature!</string>
    <!-- Menu items Strings.xml End  -->

    <!-- Main Activity Strings.xml Start -->
    <string name="Groups"> Groups</string>
    <string name="Appointments"> Appointments</string>
    <string name="Classes"> Classes</string>
    <!-- Main Activity Strings.xml End -->


    <!-- Class Fragment Strings.xml Start -->
    <string name="noClassAdded"> You have no classes </string>
    <string name="noAppAdded"> You do not have any upcoming appointments.</string>

</resources>