<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/usernametextview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/username_login_form">
    </TextView>

    <EditText
        android:id="@+id/usernametext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/username_login_form_hint"
        ></EditText>

    <TextView
        android:id="@+id/passwordtextview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/password_login_form">
    </TextView>

    <EditText
        android:id="@+id/passwordtext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"

        ></EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:onClick="logInAction"
        ></Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goToRegisterBtn"
        android:text="@string/go_to_register"
        android:onClick="goToRegisterActivity"
        ></Button>



</LinearLayout>