<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView

    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:padding="20dp"
    app:strokeWidth="@dimen/cardview_default_radius"

    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/help_icon">

        </ImageView>

        <TextView
            android:id="@+id/Help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="How to use the app "
            android:textFontWeight="700"
            android:textSize="30sp"
            android:textStyle="bold"
 />


        <TextView
            android:id="@+id/ViewGroupInstructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Classes Feature"
            android:textStyle="bold"
 />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"

            android:text="@string/CoursesParagraph"
            app:layout_constraintBottom_toTopOf="@+id/AppointmentsTitle"
            tools:layout_editor_absoluteX="-16dp" />

        <TextView
            android:id="@+id/AppointmentsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Appointments Feature "

            android:textStyle="bold"
 />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/AppointmentParagraph"
/>

        <TextView
            android:id="@+id/GroupsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Groups Feature "
            android:textStyle="bold"
/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/GroupsParagraph" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>